deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeconfig-generator
spec:
  selector:
    app: kubeconfig-generator
  ports:
  - port: 8080
    targetPort: 8080
